# lightning

./: .env.example  .gitignore  CLAUDE.md  INTEGRATION.md  README.md  aegis_tier1_claude_code_guide.md  chemcrow_lightning_demo.py  lightning_CLAUDE_CODE_PROMPT.md  lightning_RULE_EXPANSION.md  lightning_STATUS.md  lightning_WOW_FEATURES.md  pyproject.toml  run_demo.py  run_fastapi.py
.handoff/: CLAUDE_CODE_PROMPT.md  STATUS.md  ui_mockups.html
aegis_phase0/: README.md
aegis_phase0/scripts/: generate_substance_atoms.py
data/sources/: australia_group_biological.csv  bis_ai_compute.csv  bis_entity_list.csv  cwc_schedule_1.csv  cwc_schedule_2.csv  cwc_schedule_3.csv  dea_schedule_i.csv  dea_schedule_ii.csv  dea_schedule_iii_v.csv  ear_cat1_materials.csv  hhs_select_agents.csv  hhs_select_agents.csv.backup  usda_select_agents.csv  usml_cat_xiv_toxics.csv  usml_explosives.csv
demos/: app.py  fastapi_app.py  live_intercept_demo.py
demos/templates/: admin.html  adversarial.html  agent_explorer.html  audit.html  how_to_use.html  index.html  presentation.html  visualization.html
examples/: ambiguous_component_spec.md  benign_suzuki.py  cross_regime_propellant.py  edge_case_dual_use.md  hydrazine_protocol.py  itar_turbopump_spec.md  model_rocket_release.md  rocket_protocol.py
examples/adversarial/: adv_1_chemical_synonym.py  adv_2_circumlocution.py  adv_3_split_protocol.py  adv_4_foreign_language.py  adv_5_smiles_only.py
lightning_pkg/: README.md
scripts/: generate_substance_atoms.py
tests/: conftest.py  test_golden.py  test_proof_properties.py
(+86 files in other folders)
