[project]
name = "lightning"
version = "0.1.0"
description = "A neurosymbolic safety layer for autonomous research agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic[bedrock]>=0.40",
    "clingo>=5.7",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# Opt-in for v2 CWC SMARTS substructure matching. Not required for v1.
cwc = ["rdkit>=2024.3"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.scripts]
lightning = "lightning.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lightning"]

[tool.hatch.build.targets.wheel.force-include]
"src/lightning/knowledge_base" = "lightning/knowledge_base"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
